include/comettextel/c_api.h

/**
 * @file c_api.h
 * @brief Stable C ABI for CometTextel (P/Invoke / NuGet friendly).
 *
 * @author Ji-Feng Tsai (Jiowcl)
 * @email jiowcl@gmail.com
 * @copyright Copyright (c) 2026 Jiowcl. All rights reserved.
 */

#ifndef COMETTEXTEL_C_API_H
#define COMETTEXTEL_C_API_H

#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

#if defined(COMETTEXTEL_STATIC)
#  define CT_API
#elif defined(_WIN32) || defined(__CYGWIN__)
#  if defined(COMETTEXTEL_BUILDING)
#    define CT_API __declspec(dllexport)
#  else
#    define CT_API __declspec(dllimport)
#  endif
#elif defined(__GNUC__) && __GNUC__ >= 4
#  define CT_API __attribute__((visibility("default")))
#else
#  define CT_API
#endif

/** @brief Status codes compatible with comettextel::Errc values. */
enum ct_status {
    CT_OK = 0,
    CT_ERR_INVALID_ARGUMENT = 1,
    CT_ERR_NOT_OPEN = 2,
    CT_ERR_ALREADY_OPEN = 3,
    CT_ERR_IO = 4,
    CT_ERR_TIMEOUT = 5,
    CT_ERR_MODEM_REJECTED = 6,
    CT_ERR_ENCODE = 7,
    CT_ERR_DECODE = 8,
    CT_ERR_UNSUPPORTED = 9,
    CT_ERR_UNKNOWN = 100
};

/** @brief Current C ABI feature version. */
#define CT_API_VERSION 3

/** @brief TP-DCS values. */
enum ct_dcs {
    CT_DCS_GSM7 = 0, /**< GSM 03.38 7-bit default alphabet (+ ESC extension); text is UTF-8 */
    CT_DCS_8BIT = 4,
    CT_DCS_UCS2 = 8
};

/** @brief Opaque modem handle. */
typedef struct ct_modem ct_modem;

/** @brief Decoded / listed message (UTF-8 text fields). */
typedef struct ct_message {
    int32_t index;
    int32_t dcs;
    int32_t has_udh;
    char service_center[32];
    char peer_address[32];
    char service_timestamp[32];
    char user_data[512];
    /** @brief 1 when a concatenated SMS IE was found in the UDH. */
    int32_t is_concatenated;
    /** @brief Concatenation reference (8- or 16-bit IE). */
    int32_t concat_ref;
    /** @brief Total segment count (valid when is_concatenated != 0). */
    int32_t concat_total;
    /** @brief 1-based segment index; 0 when list/reassembly joined a complete set. */
    int32_t concat_seq;
} ct_message;

/**
 * @brief Decoded SMS-STATUS-REPORT fields.
 *
 * This separate type keeps the existing @ref ct_message ABI unchanged.
 * Timestamp fields contain the library's serialized semi-octet form.
 */
typedef struct ct_status_report {
    int32_t message_reference;
    int32_t tp_status;
    char recipient_address[32];
    char service_timestamp[32];
    char discharge_time[32];
} ct_status_report;

/**
 * @brief Returns the C ABI feature version.
 * @return The current @ref CT_API_VERSION.
 *
 * Libraries predating this function are treated as version 1 by SDKs.
 */
CT_API int ct_api_version(void);

/**
 * @brief Returns a static English description for @p status.
 * @param status The status code.
 * @return The status string.
 */
CT_API const char* ct_status_string(int status);

/**
 * @brief Creates a modem instance. Free with @ref ct_modem_destroy.
 * @return The modem object.
 */
CT_API ct_modem* ct_modem_create(void);

/**
 * @brief Destroys a modem instance (safe with NULL).
 * @param modem The modem object.
 */
CT_API void ct_modem_destroy(ct_modem* modem);

/**
 * @brief Opens the serial port and initializes the modem (PDU mode).
 * @param port Device name, e.g. "COM3" or "/dev/ttyUSB0".
 * @param baud_rate Baud rate (for example 115200).
 * @return The status code.
 */
CT_API int ct_modem_open(ct_modem* modem, const char* port, uint32_t baud_rate);

/**
 * @brief Sends one SMS.
 * @param smsc SMSC digits (empty string allowed for modem default).
 * @param destination Destination digits.
 * @param text UTF-8 message body.
 * @param dcs One of @ref ct_dcs.
 * @param timeout_ms Final OK/ERROR wait after Ctrl-Z.
 * @return The status code.
 */
CT_API int ct_modem_send(ct_modem* modem,
                         const char* smsc,
                         const char* destination,
                         const char* text,
                         int dcs,
                         int timeout_ms);

/**
 * @brief Sends one SMS with explicit TP-VP / TP-SRR options.
 * @param relative_validity_period -1 for no TP-VP, otherwise a GSM relative
 *        TP-VP octet in the range 0..255 (0 means 5 minutes).
 * @param request_status_report Non-zero to set TP-SRR.
 * @return The status code.
 */
CT_API int ct_modem_send_ex(ct_modem* modem,
                            const char* smsc,
                            const char* destination,
                            const char* text,
                            int dcs,
                            int relative_validity_period,
                            int request_status_report,
                            int timeout_ms);

/**
 * @brief Lists stored messages into @p out (up to @p max_count).
 * @param modem The modem object.
 * @param out The destination message list.
 * @param max_count The maximum number of messages to list.
 * @param out_count Receives the number of messages written.
 * @param timeout_ms The timeout in milliseconds.
 * @return The status code.
 *
 * @note Complete concatenated-SMS sets are rejoined (concat_seq == 0).
 */
CT_API int ct_modem_list(ct_modem* modem,
                         ct_message* out,
                         int max_count,
                         int* out_count,
                         int timeout_ms);

/**
 * @brief Deletes a stored message and waits for OK/ERROR.
 * @param modem The modem object.
 * @param index The index of the message to delete.
 * @param timeout_ms The timeout in milliseconds.
 * @return The status code.
 */
CT_API int ct_modem_delete(ct_modem* modem, int index, int timeout_ms);

/**
 * @brief Drains unsolicited modem input and returns one SMS-STATUS-REPORT.
 * @param modem The modem object.
 * @param out Receives the decoded status report.
 * @param timeout_ms Wait after an initial drain; 0 is non-blocking.
 * @return CT_OK when a report is returned; CT_ERR_TIMEOUT when none is
 *         available; CT_ERR_NOT_OPEN when the modem is closed.
 *
 * @note Requires C ABI version 3. Reports arrive as @c +CDS URCs when the
 *       modem accepted @c AT+CNMI during @ref ct_modem_open.
 */
CT_API int ct_modem_poll_status_report(ct_modem* modem,
                                       ct_status_report* out,
                                       int timeout_ms);

/**
 * @brief Sends one AT command and waits for a final OK or ERROR.
 * @param modem The modem object.
 * @param command Command bytes; a trailing @c \\r is appended when missing.
 * @param out_response Receives accumulated modem text (NUL-terminated).
 * @param out_response_cap Capacity of @p out_response in bytes (including NUL).
 * @param timeout_ms Maximum wait for OK/ERROR.
 * @return CT_OK on success; partial text may still be written on error.
 *
 * @note Requires C ABI version 3. URCs are demultiplexed during the wait.
 */
CT_API int ct_modem_run_at_command(ct_modem* modem,
                                   const char* command,
                                   char* out_response,
                                   int out_response_cap,
                                   int timeout_ms);

/**
 * @brief Encodes a submit PDU hex string (no modem I/O).
 * @param smsc The service center address.
 * @param destination The destination address.
 * @param text UTF-8 message body.
 * @param dcs The data coding scheme.
 * @param out_hex The destination PDU hex string.
 * @param out_hex_cap The destination PDU hex string capacity.
 * @return CT_OK on success; writes NUL-terminated hex into @p out_hex.
 *
 * @note The default API omits TP-VP and does not request a status report.
 * @note For @ref CT_DCS_GSM7, @p text is mapped with the GSM 03.38 default
 *       alphabet and ESC extension (`[]{}\\~^|€`, …). Unsupported glyphs
 *       return @c CT_ERR_ENCODE (use @ref CT_DCS_UCS2). Extension characters
 *       consume two septets toward the 160-septet single-segment limit.
 */
CT_API int ct_pdu_encode_submit(const char* smsc,
                                const char* destination,
                                const char* text,
                                int dcs,
                                char* out_hex,
                                size_t out_hex_cap);

/**
 * @brief Encodes a submit PDU with explicit TP-VP / TP-SRR options.
 * @param relative_validity_period -1 for no TP-VP, otherwise 0..255. Value
 *        0 is a valid 5-minute relative validity period.
 * @param request_status_report Non-zero to set TP-SRR.
 * @return CT_OK on success; writes NUL-terminated hex into @p out_hex.
 */
CT_API int ct_pdu_encode_submit_ex(const char* smsc,
                                   const char* destination,
                                   const char* text,
                                   int dcs,
                                   int relative_validity_period,
                                   int request_status_report,
                                   char* out_hex,
                                   size_t out_hex_cap);

/**
 * @brief Encodes one or more submit PDUs (auto-splits with concat UDH when needed).
 * @param out_hex Receives newline-separated hex strings, NUL-terminated.
 * @param out_hex_cap Capacity of @p out_hex including the trailing NUL.
 * @param out_count Receives the number of segments (1 or more).
 * @return CT_OK on success.
 */
CT_API int ct_pdu_encode_submit_segments(const char* smsc,
                                         const char* destination,
                                         const char* text,
                                         int dcs,
                                         char* out_hex,
                                         size_t out_hex_cap,
                                         int* out_count);

/**
 * @brief Encodes submit PDUs with explicit TP-VP / TP-SRR options.
 * @param relative_validity_period -1 for no TP-VP, otherwise 0..255.
 * @param request_status_report Non-zero to set TP-SRR on every segment.
 * @return CT_OK on success.
 */
CT_API int ct_pdu_encode_submit_segments_ex(const char* smsc,
                                            const char* destination,
                                            const char* text,
                                            int dcs,
                                            int relative_validity_period,
                                            int request_status_report,
                                            char* out_hex,
                                            size_t out_hex_cap,
                                            int* out_count);

/**
 * @brief Decodes a PDU hex string into @p out (no modem I/O).
 * @param pdu_hex The PDU hex string.
 * @param out The destination message struct.
 * @return The status code.
 */
CT_API int ct_pdu_decode(const char* pdu_hex, ct_message* out);

/**
 * @brief Decodes an SMS-STATUS-REPORT PDU into @p out.
 * @param pdu_hex The SMS-STATUS-REPORT PDU hex string.
 * @param out The destination status report struct.
 * @return CT_OK when the PDU has MTI=10 and was decoded successfully;
 *         CT_ERR_DECODE for another message type or malformed data.
 */
CT_API int ct_pdu_decode_status_report(const char* pdu_hex,
                                       ct_status_report* out);

#ifdef __cplusplus
}
#endif

#endif /* COMETTEXTEL_C_API_H */